# NeoCpp

./: .gitignore  CMakeLists.txt  CONVERSION_COMPLETE.md  CONVERSION_REPORT.md  CONVERSION_STATUS.md  FINAL_CONVERSION_SUMMARY.md  PRODUCTION_IMPROVEMENTS.md  PRODUCTION_READINESS.md  README.md  SWIFT_CPP_CONSISTENCY_REPORT.md  SWIFT_TEST_CONVERSION_STATUS.md  TESTING.md  TEST_COVERAGE_REPORT.md  TEST_FIXES_SUMMARY.md  simple_test  simple_test.cpp  test_production.cpp  test_sdk  test_sdk.cpp
.github/: CI_STATUS.md
.github/workflows/: ci.yml  diagnostic-build.yml  diagnostic.yml  final-test.yml  minimal-test.yml  no-curl-build.yml  quick-test.yml  simple-build.yml  working-build.yml
build_test/: Makefile
cmake/: NeoCppConfig.cmake.in
examples/: CMakeLists.txt  crypto_example.cpp  transaction_example.cpp  wallet_example.cpp
include/neocpp/: exceptions.hpp  logger.hpp  neo_constants.hpp  neo_swift_error.hpp  neocpp.hpp
include/neocpp/contract/: contract.hpp  contract_management.hpp  contract_manifest.hpp  fungible_token.hpp  gas_token.hpp  iterator.hpp  nef_file.hpp  neo_name_service.hpp  neo_token.hpp  non_fungible_token.hpp  policy_contract.hpp  role_management.hpp  smart_contract.hpp  token.hpp
include/neocpp/crypto/: bip32_ec_key_pair.hpp  bip39.hpp  ec_key_pair.hpp  ec_point.hpp  ecdsa_signature.hpp  hash.hpp  nep2.hpp  scrypt_params.hpp  sign.hpp  wif.hpp
include/neocpp/protocol/: http_service.hpp  neo_cpp.hpp  neo_rpc_client.hpp  response_types.hpp  response_types_impl.hpp  stack_item.hpp
include/neocpp/script/: interop_service.hpp  invocation_script.hpp  op_code.hpp  script_builder.hpp  verification_script.hpp
include/neocpp/serialization/: binary_reader.hpp  binary_writer.hpp  neo_serializable.hpp
include/neocpp/transaction/: account_signer.hpp  contract_parameters_context.hpp  contract_signer.hpp  (+7 more)
src/: logger.cpp  neo_constants.cpp
src/contract/: contract_management.cpp  fungible_token.cpp  gas_token.cpp  iterator.cpp  nef_file.cpp  neo_name_service.cpp  neo_token.cpp  non_fungible_token.cpp  policy_contract.cpp  role_management.cpp  smart_contract.cpp  token.cpp
src/crypto/: bip32_ec_key_pair.cpp  bip39.cpp  ec_key_pair.cpp  ec_point.cpp  ecdsa_signature.cpp  hash.cpp  nep2.cpp  scrypt_params.cpp  wif.cpp
src/protocol/: http_service.cpp  neo_cpp.cpp  neo_rpc_client.cpp  response_types.cpp  stack_item.cpp
src/script/: op_code.cpp  script_builder.cpp
src/serialization/: binary_reader.cpp  binary_writer.cpp
src/transaction/: account_signer.cpp  contract_parameters_context.cpp  contract_signer.cpp  signer.cpp  transaction.cpp  transaction_attribute.cpp  transaction_builder.cpp  witness.cpp  witness_rule.cpp
src/types/: contract_parameter.cpp  hash160.cpp  hash256.cpp  types.cpp
src/utils/: address.cpp  base58.cpp  base64.cpp  hex.cpp
src/wallet/: account.cpp  wallet.cpp
tests/: CMakeLists.txt  main.cpp  stub_test_template.cpp  test_hash.cpp  test_main.cpp  test_transaction.cpp  test_types.cpp  test_wallet.cpp
tests/contract/: test_contract_manifest.cpp  test_gas_token_complete.cpp  test_nef_file.cpp  test_neo_token_complete.cpp  test_policy_contract_complete.cpp  test_smart_contract.cpp  test_smart_contract_complete.cpp
tests/crypto/: test_base58.cpp  test_base64.cpp  test_ec_key_pair.cpp  test_ecdsa_signature.cpp  test_hash.cpp  test_nep2.cpp  test_scrypt_params.cpp  test_sign.cpp  test_wif.cpp
tests/error/: test_error_handling.cpp
tests/integration/: test_full_workflow.cpp
tests/logger/: test_logger.cpp
tests/mock/: mock_rpc_client.hpp
tests/protocol/: test_request_complete.cpp  test_response_complete.cpp  test_rpc_integration.cpp
tests/script/: test_invocation_script.cpp  test_op_code.cpp  test_script_builder.cpp  test_script_builder_complete.cpp  test_script_reader.cpp  test_verification_script.cpp
tests/serialization/: test_binary_reader.cpp  test_binary_writer.cpp  test_var_size.cpp
tests/transaction/: test_signer.cpp  test_transaction.cpp  test_transaction_builder_complete.cpp  test_witness.cpp  test_witness_rule.cpp  test_witness_scope.cpp
tests/types/: test_contract_parameter.cpp  test_hash160.cpp  test_hash256.cpp
tests/utils/: test_address.cpp  test_hex.cpp
tests/wallet/: test_account.cpp  test_nep6_wallet.cpp  test_wallet.cpp
(+144 files in other folders)
